--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26882,3 +26882,42 @@ position: absolute;
    /*==================================== Navbar End====================================
   =========================================================================================
   =========================================================================================*/
+
+
+    /*====================================google translate====================================
+  =========================================================================================
+  =========================================================================================*/
+  .goog-te-gadget-simple {
+    display: none !important;
+}
+.goog-te-banner-frame {
+    display: none !important;
+}
+.goog-te-menu-value {
+    display: none !important;
+}
+.goog-te-gadget {
+    color: transparent !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd{
+    display: none;
+  }
+
+.VIpgJd-ZVi9od-ORHb-OEVmcd{
+    display: none !important;
+  } 
+.language{
+  border-radius: 10px !important;
+  margin-bottom: -40px;
+}
+
+
+.VIpgJd-ZVi9od-l4eHX-hSRGPd, .VIpgJd-ZVi9od-l4eHX-hSRGPd:link, .VIpgJd-ZVi9od-l4eHX-hSRGPd:visited, .VIpgJd-ZVi9od-l4eHX-hSRGPd:hover, .VIpgJd-ZVi9od-l4eHX-hSRGPd:active{
+  display: none;
+}
+
+.goog-te-combo{
+  padding: 5px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
